# occlusiontracking

./: .gitignore  LICENSE  README  boundary_occl_cropper.asv  boundary_occl_cropper.m  calculate_pixels.m  combine_confidence_graphs.m  combine_varying_settings.m  compare_lean_features.m  compare_output_visually.m  compute_adjusted_epe.m  compute_adjusted_epe_with_conf.m  convertToPngs.m  download_algorithms.m  download_dataset.m  feature_imp_collapsed_graph.m  frames_to_folders.m  get_pr_curves.m  gtflow_images.m  gtflow_mask.m  makeRCGTGraphsToTable.m  makeVideoSegOcclGraphsToTable.m  movefiles.m  poster_graphs.m  separate_precompute.m  store_flow_pics.m  store_pb.m  store_st.m
algorithmSuitability/: readme.txt
consistentseg/: consistentseg.m  drawAvgColor.m  findCentroidAndMeanColors.m  iteration1.mat  iteration2.mat  iteration3.mat  iteration4.mat  iteration5.mat  (+2 more)
main_code/randomForest/src/: CMakeLists.txt  predictDescriptor.cpp
main_code/randomForest/src/predictDescriptor/: predictDescriptor.sln
main_code/randomForest/src/predictDescriptor/Debug/: predictDescriptor  predictDescriptor.ilk
main_code/randomForest/src/predictDescriptor/Release/: run.bat
main_code/randomForest/src/predictDescriptor/predictDescriptor/: Makefile  predictDescriptor.cpp  predictDescriptor.vcproj  predictDescriptor.vcxproj  predictDescriptor.vcxproj.filters
main_code/randomForest/src/predictDescriptor/predictDescriptor/Debug/: BuildLog.htm  mt.dep  vc100.idb  vc90.idb
main_code/randomForest/src/predictDescriptor/predictDescriptor/Release/: BuildLog.htm  mt.dep  vc90.idb
(+426 files in other folders)
